vertical align planet-capture fixed

--- a/styles/Sonnensystem.css
+++ b/styles/Sonnensystem.css
@@ -60,6 +60,9 @@ a {
 
 .planetenBox figure {
   margin: 0;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .planetenBox figure img {
